<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/dbcreate_cont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_medium"
            android:text="@string/cont" />

        <Button
            android:id="@+id/dbcreate_create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_medium"
            android:text="@string/createdb" />
    </LinearLayout>

    <TextView
        android:id="@+id/dbcreate_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_large"
        android:text="@string/dbcreate_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/dbcreate_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbcreate_header"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_large"
        android:text="@string/dbcreate_desc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dbcreate_desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbcreate_desc"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_large"
        android:text="@string/dbcreate_desc2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dbcreate_desc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbcreate_desc2"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_large"
        android:text="@string/dbcreate_desc3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dbcreate_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:padding="@dimen/padding_large"
        android:text="@string/dbcreate_warn"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>